# skully

./: docker-compose.backend.yaml  docker-compose.frontend.yaml
frontend/: Dockerfile  llm.py  pyproject.toml  requirements.txt  skully.py
